# symengine.py

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  appveyor.yml  setup.py  symengine_version.txt
benchmarks/: expand2.ipynb
cmake/: FindGMPY2.cmake
symengine/: CMakeLists.txt  sympy_compat.py
symengine/lib/: CMakeLists.txt  config.pxi.in  core.pxd  core.pyx  functions.pyx  lambdify.pyx  matrices.pxd  matrices.pyx  symengine.pxd  symengine_wrapper.pxd  symengine_wrapper.py  symengine_wrapper.pyx
symengine/tests/: test_pickling.py  test_sympy_conv.py  test_var.py
